<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/allNotes"
        android:icon="@drawable/ic_all_notes"
        android:title="@string/all_notes" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/user_profile"/>

    <item
        android:id="@+id/knowledgeBase"
        android:icon="@drawable/ic_knowledge_base"
        android:title="@string/knowledge_base"/>

    <item
        android:id="@+id/calendarView"
        android:icon="@drawable/ic_calendar"
        android:title="@string/calendar_view"/>

<!--    <item-->
<!--        android:id="@+id/setting"-->
<!--        android:icon="@drawable/ic_setting"-->
<!--        android:title="@string/setting"/>-->

</menu>